syntax = "proto3";
package proto.audio.analysis;

message SpectralAudioAnalysisResult {
  int64 seq_num = 1;
  repeated int32 fft_bins = 2;
}
